--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,6 @@ code {
 :root {
   --primary-color: #37474f;
   --secondary-color: #455a64;
+  --accent-color: #2ecc71;
   --title-font: "Roboto Condensed", sans-serif;
 }
